# Analytics-Platform-Demo

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  CLAUDE.md  README.md  pyproject.toml
.github/: CI_SETUP.md
.github/ci/: seed_raw_fixture.sql
.github/workflows/: ci.yml
docs/: PROJECT_SPEC.md  bi_hex.md
extract/: __init__.py  config.py  db.py  load.py  run_extract.py  s3.py
extract/alpha_vantage/: __init__.py  client.py  endpoints.py  schemas.py
extract/tests/: conftest.py  test_client.py  test_endpoints.py  test_idempotency_integration.py  test_load.py  test_run_extract.py  test_schemas.py
infra/: README.md
infra/scripts/: bootstrap_db.py
infra/sql/: bootstrap.sql
infra/terraform/: .terraform.lock.hcl  budget.tf  ec2.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  security_groups.tf  sns.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf  vpc.tf
instructions/: BUILD_PLAN.md  PORTING_FROM_LEGACY.md
orchestration/: .env.example  Dockerfile  docker-compose.yaml  requirements-airflow.txt
orchestration/dags/: equities_daily.py
transform/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
transform/macros/: av_numeric.sql  generate_schema_name.sql
transform/models/marts/: _marts__models.yml  dim_date.sql  dim_security.sql  fct_daily_equity_metrics.sql  mart_risk_monitor.sql  mart_watchlist_daily.sql
transform/seeds/: _seeds.yml  sector_etf_map.csv  security_watchlist.csv
transform/snapshots/: snap_company_fundamentals.sql
transform/tests/: assert_high_low_consistency.sql  assert_no_fabricated_sentiment.sql  assert_no_future_dates.sql  assert_pit_fundamentals_no_overlap.sql
(+8 files in other folders)
